[package]
name = "deno-argon2"
version = "0.7.0"
authors = ["Federico <dionisi.federico@gmail.com>"]
edition = "2018"

[lib]
path = "native/lib.rs"
crate-type = ["cdylib"]

[dependencies]
bytes = { version = "0.5.4", features = ["serde"] }
deno_core = "0.47.1"
rust-argon2 = "0.8"
serde = { version="^1", features = ["derive"] }
serde_json = "^1"
