[package]
name = "deno-argon2"
version = "0.9.1"
authors = ["Federico <code@fdionisi.me>"]
edition = "2018"

[lib]
path = "native/lib.rs"
crate-type = ["cdylib"]

[dependencies]
bytes = { version = "1.0.1", features = ["serde"] }
deno_core = "0.83.0"
rust-argon2 = "0.8.3"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
