[package]
name = "deno-argon2"
version = "0.9.2"
authors = ["Federico <code@fdionisi.me>"]
edition = "2018"

[lib]
path = "native/lib.rs"
crate-type = ["cdylib"]

[dependencies]
bytes = { version = "1.4.0", features = ["serde"] }
rust-argon2 = "1.0.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
